# rswappalyzer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  wappalyzer_rules.mp
rswappalyzer/: .gitignore  Cargo.toml  README.md  build.rs  build_config.json  compiled_rules_debug.json
rswappalyzer-engine/: Cargo.toml  README.md
rswappalyzer-engine/src/: core.rs  error.rs  indexer.rs  lib.rs  processor.rs
rswappalyzer-engine/src/cleaner/: clean_stats.rs  pattern_processor.rs  regex_fixer.rs  rule_cleaner.rs
rswappalyzer-engine/src/core/: basic_info.rs  cached_rule.rs  enums.rs  mod.rs  pattern.rs  rule.rs
rswappalyzer-engine/src/indexer/: builder.rs  compiled.rs  enums.rs  index_rules.rs  library.rs  matcher.rs  mod.rs
rswappalyzer-engine/src/pruner/: min_evidence.rs  min_evidence_checker.rs  mod.rs  prune_strategy.rs  regex_literal.rs  scope_pruner.rs  tokenizer.rs
rswappalyzer-engine/src/regex_filter/: common.rs  extract_evidence.rs  mod.rs  prune_analyzer.rs  regex_preprocess.rs
rswappalyzer-engine/src/source/: mod.rs  wappalyzer.rs
rswappalyzer-engine/src/utils/: log_format.rs  mod.rs  preview.rs  safe_lower.rs
rswappalyzer/data/: rswappalyzer_rules.json
rswappalyzer/examples/: baseline_benchmark_detect.rs  benchmark_demo2.rs  benchmark_detect_baseline.rs  benchmark_detect_concurrent.rs  concurrent_benchmark_detect.rs  detect_demo.rs  local_detect_demo.rs  remote_detect_demo.rs  test_data.rs  test_data2.rs  test_data3.rs
rswappalyzer/examples/test_data/: test_html.html
rswappalyzer/src/: error.rs  lib.rs
rswappalyzer/src/analyzer/: candidate_collector.rs  common.rs  cookie.rs  header copy.rs  header.rs  html.rs  meta.rs  mod.rs  script.rs  url.rs
rswappalyzer/src/config/: mod.rs  rule.rs
rswappalyzer/src/detector/: detector.rs  global.rs  mod.rs
rswappalyzer/src/result/: detect_result.rs  mod.rs
rswappalyzer/src/rule/: mod.rs
rswappalyzer/src/rule/cache/: mod.rs  rule_cache.rs
rswappalyzer/src/rule/cleaner/: clean_stats.rs  mod.rs  pattern_processor.rs  regex_fixer.rs  rule_cleaner.rs
rswappalyzer/src/rule/converter/: mod.rs  wappalyzer_converter.rs
rswappalyzer/src/rule/core/: base.rs  category_rule.rs  detect_result.rs  mod.rs  parsed_rule.rs  pattern.rs  pattern_list.rs
rswappalyzer/src/rule/indexer/: index_pattern.rs  indexed_rule.rs  mod.rs  rule_indexer.rs  scope.rs
rswappalyzer/src/rule/loader/: etag.rs  etag_manager.rs  mod.rs  path_manager.rs  remote_fetcher.rs  remote_source.rs  rule_loader.rs  rule_processor.rs
rswappalyzer/src/rule/source/: base_parser.rs  mod.rs
rswappalyzer/src/rule/source/fingerprinthub/: mod.rs  original.rs  parser.rs
rswappalyzer/src/rule/source/wappalyzer_go/: original.rs  parser.rs
rswappalyzer/src/rule/transformer/: mod.rs  wappalyzer_common.rs  wappalyzer_transformer.rs
rswappalyzer/src/utils/: detection_updater.rs  header_converter.rs  mod.rs  version_extractor.rs
rswappalyzer/src/utils/extractor/: html_extractor.rs  html_input_guard.rs  mod.rs  token_extract.rs  token_extract_zh.rs
rswappalyzer/src/utils/regex_filter/: common.rs  extract_evidence.rs  min_evidence.rs  mod.rs  prune_analyzer.rs  scope_pruner.rs
src/: config.rs  error.rs  lib.rs
src/compiler/: compiler.rs  mod.rs  pattern.rs
src/detector/: analyzer.rs  detector.rs  global.rs  mod.rs
src/extractor/: html_extractor.rs  mod.rs
src/rule/: cache.rs  loader.rs  mod.rs  model.rs  source_eh.rs
src/utils/: detection_updater.rs  header_converter.rs  mod.rs  version_extractor.rs
