[package]
name = "rswappalyzer"
version = "0.1.1"
edition = "2024"
authors = ["FlyfishSec <adwinistrator@foxmail.com>"]
description = "A high-performance Rust implementation of Wappalyzer for fast website technology stack detection. 高性能 Wappalyzer Rust 实现，基于流式 HTML 解析与优化匹配，适用于爬虫、安全扫描与监控系统。"
repository = "https://github.com/FlyfishSec/rswappalyzer"
license = "MIT"
keywords = ["wappalyzer", "tech-detect", "web-scan", "http-analyzer", "hprobe"]
categories = ["web-programming", "command-line-utilities", "parsing"]
readme = "README.md"
documentation = "https://docs.rs/rswappalyzer"
#exclude = [".gitignore", "tests/**/*.txt", "*.del"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE"
]

[lib]
name = "rswappalyzer"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

#[[bin]]
#name = "rswappalyzer"
#path = "src/main.rs"

# 公开依赖
[dependencies]
tokio = { version = "1.35.0", default-features = false, features = ["rt-multi-thread", "macros", "net", "time", "fs"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rmp-serde = "1.3.0"
regex = { version = "1.12.2", features = ["perf"] }
once_cell = "1.18.0"
html5ever = "0.36.1"
markup5ever = "0.36.1"
tendril = "0.4.3"
thiserror = "1.0.50"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "gzip",] }
url = "2.5.7"
tracing = { version = "0.1.43", optional = true, default-features = false, features = ["std"] }
clap = { version = "4.4.12", features = ["derive", "cargo"] }
anyhow = { version = "1.0.79", features = ["backtrace"] }

# 开发依赖
[dev-dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }  # 测试异步逻辑
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "std", "chrono"] }

# 可选特性
[features]
default = ["logging"]  # 默认启用日志
logging = ["tracing"]  # 日志特性（依赖 tracing）
