[workspace]
members = [
    "rswappalyzer",
    "rswappalyzer-engine",
]

[workspace.dependencies]
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.115"
regex = { version = "1.10.4", features = ["perf"] }
regex-syntax = "0.8.4"
once_cell = "1.19"
rustc-hash = "2.0"
lz4_flex = "0.11.3"
log = "0.4.22"
thiserror = "2.0.3"
async-trait = "0.1.80"
