[package]
name = "rswappalyzer-engine"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.115"
regex = { version = "1.10.4", features = ["perf"] }
regex-syntax = "0.8.4"
rustc-hash = "2.0"
once_cell = "1.19"

[features]
full-meta = []


