[package]
name = "rswappalyzer-engine"
version = "0.2.2"
edition = "2021"
authors = ["FlyfishSec <adwinistrator@foxmail.com>"]

description = "Core engine for rswappalyzer"
license = "MIT"
repository = "https://github.com/FlyfishSec/rswappalyzer"
readme = "README.md"

keywords = ["wappalyzer", "fingerprinting", "engine", "detection"]
categories = ["network-programming", "web-programming"]

include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

regex = { version = "1", features = ["perf"] }
regex-syntax = "0.8"

rustc-hash = "2"
once_cell = "1"
thiserror = "2"
log = "0.4"

[features]
full-meta = []
