[package]
name = "rswappalyzer"
version = "0.2.0"
edition = "2021"
authors = ["FlyfishSec <adwinistrator@foxmail.com>"]
description = "High-performance Rust implementation of Wappalyzer"
repository = "https://github.com/FlyfishSec/rswappalyzer"
license = "MIT"
keywords = ["wappalyzer", "web-detect", "fingerprint"]
categories = ["web-programming", "parsing"]
readme = "README.md"

include = [
    "src/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE"
]

[lib]
name = "rswappalyzer"
path = "src/lib.rs"
crate-type = ["rlib"]

# ======================
# Runtime dependencies
# ======================
[dependencies]
rswappalyzer-engine = { path = "../rswappalyzer-engine", version = "0.2.0"}
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.115"

regex = { version = "1.10.4", features = ["perf"] }
regex-syntax = "0.8.4"

once_cell = "1.19.0"
thiserror = "2.0.3"
#anyhow = "1.0.86"
async-trait = "0.1.80"

url = "2.5.4"
http = "1.1.0"

lol_html = "2.7.0"
#html5ever = "0.26.0"
#markup5ever = "0.11.0"
#tendril = "0.4.3"

log = "0.4.22"
rustc-hash = "2.0.0"
lz4_flex = "0.11.3"

# --- Optional  ---
reqwest = { version = "0.13.1", optional = true, default-features = false, features = ["json", "gzip"] }
tokio = { version = "1", optional = true, features = ["fs", "sync"] }

# --- CLI only ---
clap = { version = "4.5.9", optional = true, features = ["derive", "cargo"] }

tracing = { version = "0.1.41", optional = true }
tracing-log = { version = "0.2.0", optional = true }

# ======================
# Build dependencies
# ======================
[build-dependencies]
rswappalyzer-engine = { path = "../rswappalyzer-engine", version = "0.2.0"}
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.115"

regex = { version = "1.10.4", features = ["perf"] }
regex-syntax = "0.8.4"

once_cell = "1.19.0"
rustc-hash = "2.0.0"
lz4_flex = "0.11.3"

walkdir = "2.5.0"
log = "0.4.22"
env_logger = "0.11.5"

# ======================
# Dev dependencies
# ======================
[dev-dependencies]
tokio = { version = "1.48.0", features = ["full", "macros"] }  # 测试异步逻辑
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "std"] }
env_logger = "0.11.5"

# ======================
# Features
# ======================
[features]
default = ["embedded-rules"]
embedded-rules = []
full-meta = []
async-io = ["tokio"]                  # 异步IO：仅启用 tokio，支持异步缓存读写/异步单例
remote-loader = ["dep:reqwest"]
cli = ["dep:clap"]
tracing = ["dep:tracing", "dep:tracing-log"]

# ======================
# Release profile
# ======================
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
