[package]
name = "rswappalyzer"
version = "0.2.0"
edition = "2021"
authors = ["FlyfishSec <adwinistrator@foxmail.com>"]
description = "A high-performance Wappalyzer rule detection engine."
repository = "https://github.com/FlyfishSec/rswappalyzer"
license = "MIT"
keywords = ["wappalyzer", "web-detect", "fingerprint"]
categories = ["web-programming", "network-programming"]
readme = "README.md"

include = [
    "src/**/*.rs",
    "build.rs",
    "build_config.json",
    "data/rswappalyzer_rules.json",
    "data/categories_data.json",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[lib]
name = "rswappalyzer"
path = "src/lib.rs"
crate-type = ["rlib"]

# ======================
# Runtime dependencies
# ======================
[dependencies]
rswappalyzer-engine = "0.2.0"
#rswappalyzer-engine = { path = "../rswappalyzer-engine", version = "0.2.0"}

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

regex = { version = "1", features = ["perf"] }
regex-syntax = "0.8"

once_cell = "1"
thiserror = "2"
async-trait = "0.1"

url = "2"
http = "1"

lol_html = "2"

log = "0.4"
rustc-hash = "2"
lz4_flex = "0.11"

# --- Optional ---
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "json",
    "gzip",
    "socks",
    "rustls-tls-webpki-roots"
] }
tokio = { version = "1", optional = true, features = ["fs", "sync"] }

# --- CLI only ---
clap = { version = "4", optional = true, features = ["derive", "cargo"] }

tracing = { version = "0.1", optional = true }
tracing-log = { version = "0.2", optional = true }

# ======================
# Build dependencies
# ======================
[build-dependencies]
rswappalyzer-engine = { version = "0.2.0" }
#rswappalyzer-engine = { path = "../rswappalyzer-engine", version = "0.2.0" }

serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

regex = { version = "1", features = ["perf"] }
regex-syntax = "0.8"

once_cell = "1"
rustc-hash = "2"
lz4_flex = "0.11"

walkdir = "2"
log = "0.4"
env_logger = "0.11"

# ======================
# Dev dependencies
# ======================
[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
env_logger = "0.11"

# ======================
# Features
# ======================
[features]
default = ["embedded-rules"]
embedded-rules = []
full-meta = []
async-io = ["dep:tokio"]
remote-loader = ["dep:reqwest", "dep:tokio"]
cli = ["dep:clap"]
tracing = ["dep:tracing", "dep:tracing-log"]

[[example]]
name = "local_detect_demo"
required-features = ["embedded-rules"]

[[example]]
name = "benchmark_demo2"
required-features = ["embedded-rules"]

[[example]]
name = "remote_detect_demo"
required-features = ["remote-loader"]
